--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: ./backend
     volumes:
       - ./backend/app:/app/app
+      - ./backend/sqlbackup.db:/app/sqlbackup.db
     ports:
       - "8000:8000"
   frontend:
